--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-razorpay": "^3.0.1",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
