--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-razorpay": "^3.0.1",
